Jorunal: Fix .entry__subtitle on small screens.

--- a/_sources/journal.scss
+++ b/_sources/journal.scss
@@ -164,6 +164,11 @@
     margin-bottom: 0;
   }
 
+  .entry__subtitle {
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+
   .entry__metadata {
     position: relative;
     top: -5px;
